--- a/cucumber_v2/pom.xml
+++ b/cucumber_v2/pom.xml
@@ -30,6 +30,16 @@
         <version>1.2.4</version>
         <scope>test</scope>
     </dependency>
+    <dependency>
+        <groupId>com.vimalselvam</groupId>
+        <artifactId>cucumber-extentsreport</artifactId>
+        <version>3.0.2</version>
+    </dependency>
+    <dependency>
+        <groupId>com.aventstack</groupId>
+        <artifactId>extentreports</artifactId>
+        <version>3.1.1</version>
+    </dependency>
 </dependencies>
 <build>
 <plugins>
